# JARVIS_SelectionService

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  release.yml
src/arp_template_selection_service/: __main__.py  app.py  node_registry_client.py  service.py  utils.py
src/jarvis_selection_service/: __init__.py  app.py  service.py
src/scripts/: dev_server.sh  request.json
tests/: test_selection_smoke.py
